<?xml version="1.0" encoding="utf-8"?>

<TableLayout 
	android:id="@+id/TableLayout01" 
	android:layout_width="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background" android:layout_height="fill_parent">
	
	<TextView
		android:text="@string/newgame_title"
		android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/text" android:gravity="center" android:layout_marginBottom="15dip" android:layout_marginTop="5dip"/>
	
	<TableRow 
		android:id="@+id/TableRow01"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:gravity="center">
		
		<TextView 
			android:text="@string/name_label" 
			android:textColor="@color/text"
			android:layout_height="fill_parent" 
			android:gravity="center_vertical" 
			android:layout_width="fill_parent"/>
			
		<EditText
			android:id="@+id/name_input"
			android:textColor="@color/text"
			android:textSize="14sp"
			android:singleLine="true"
			android:width="200dip" 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"/>
			
	</TableRow>
	
	
	<Button
		android:id="@+id/start_button"
		android:text="@string/new_game_label" android:layout_marginTop="15dip" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	
	
	
</TableLayout>
